make restore of trash possible

--- a/public/index.html
+++ b/public/index.html
@@ -400,6 +400,14 @@
         </td>
     </script>
 
+    <script id="trash-row" type="text/template">
+        <td><%= name %></td>
+        <td>
+            <a id="file-restore-button" class="btn"><span class="glyphicon glyphicon-repeat" aria-hidden="true" title="Restore"></span>
+            <a id="file-trash-button" class="btn"><span class="glyphicon glyphicon-trash" aria-hidden="true" title="Delete"></span>
+        </td>
+    </script>
+
     <script id="configuration-row" type="text/template">
         <td><%= name %></td>
         <td>
