take unique icons for reader/writer

--- a/public/index.html
+++ b/public/index.html
@@ -96,9 +96,9 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" title="Add" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a id="add-reader-button" class="toolbar-btn add-button"><i class="glyphicon glyphicon-share" aria-hidden="true"></i> Reader</a></li>
+                            <li><a id="add-reader-button" class="toolbar-btn add-button"><i class="glyphicon glyphicon-import" aria-hidden="true"></i> Reader</a></li>
                             <li><a id="add-gadget-button" class="toolbar-btn add-button"><i class="glyphicon glyphicon-cog" aria-hidden="true"></i> Gadget</a></li>
-                            <li><a id="add-writer-button" class="toolbar-btn add-button"><i class="glyphicon glyphicon-edit" aria-hidden="true"></i> Writer</a></li>
+                            <li><a id="add-writer-button" class="toolbar-btn add-button"><i class="glyphicon glyphicon-export" aria-hidden="true"></i> Writer</a></li>
                         </ul>
                     </li>
                     <li><a id="reorder-button" class="toolbar-btn btn active-btn" title="Reorder gadgets"><span class="glyphicon glyphicon-transfer" aria-hidden="true"></span></a></li>
