make save button red when something changed

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,7 @@
             <div>
                 <ul class="nav navbar-nav">
                     <li>
-                    <a class="dropdown-toggle" title="Save" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></a>
+                    <a class="dropdown-toggle" title="Save" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span id="save-dropdown" class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
                             <li><a id="save-button" class="toolbar-btn" title="Save"><i class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></i> Save</a></li>
                             <li><a id="save-as-button" class="toolbar-btn" title="Save as"><i class="glyphicon glyphicon-floppy-save" aria-hidden="true"></i> Save as</a></li>
