added custom contextmenu in configuration-editor closes #3

--- a/public/index.html
+++ b/public/index.html
@@ -500,6 +500,11 @@
     </script>
     <!-- STATUS-Template -->
 
+    <!-- CONTEXT MENU -->
+    <ul id="context-menu" style="display: none" class="menu">
+    </ul>
+    <!-- CONTEXT MENU -->
+
     <script src="js/gadgetronBundleApp.js"></script>
 </body>
 
