switch between logs from gadgetron, UI, ... attach sender to log message

--- a/public/index.html
+++ b/public/index.html
@@ -505,6 +505,24 @@
     </ul>
     <!-- CONTEXT MENU -->
 
+    <!-- FITER MENU -->
+    <ul id="filter-menu" style="display: none" class="menu">
+        <span class="glyphicon glyphicon-filter" aria-hidden="true"></span> Log-File Filter
+        <div class="checkbox">
+            <label><input type="checkbox" value="" class="log-control-check" id="GadgetronControl" autocomplete="off" checked>GadgetronControl</label>
+        </div>
+        <div class="checkbox">
+            <label><input type="checkbox" value="" class="log-control-check" id="siemens_to_ismrmrd" autocomplete="off" checked>siemens_to_ismrmrd</label>
+        </div>
+        <div class="checkbox">
+            <label><input type="checkbox" value="" class="log-control-check" id="gadgetron_ismrmrd_client" autocomplete="off" checked>gadgetron_ismrmrd_client</label>
+        </div>
+        <div class="checkbox">
+            <label><input type="checkbox" value="" class="log-control-check" id="hdfview" autocomplete="off" checked>hdfview</label>
+        </div>
+    </ul>
+    <!-- FITER MENU -->
+
     <script src="js/gadgetronBundleApp.js"></script>
 </body>
 
