deleted old view

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,15 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">Database
+                    </div>
+                    <div class="panel-body">
+                        <div id="database-view"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </script>
     <!-- SETTINGS -->
@@ -187,6 +196,12 @@
         </script>        
         <!-- CONFIGURATION-ROW -->
     <!-- CONFIGURATION -->
+
+    <!-- DATABASE -->
+    <script id="database-template" type="text/template">
+        <button class="btn btn-warning pull-right" type="button" id="refresh-database"><i class="glyphicon glyphicon-floppy-save" aria-hidden="true"></i> Refresh Database</button>
+    </script>
+    <!-- DATABASE -->
 
     <script id="dashboard-template" type="text/template">
         <div class="panel panel-default">
